<resources>
    <string name="app_name" translatable="false">MyNewsApp</string>

    <string name="home">Home</string>
    <string name="home_detail">Home Detail</string>
    <string name="favorite">Favorite</string>
    <string name="article_image">Article Image</string>
    <string name="error_image">Error Image</string>
    <string name="please_try_later">Please Try Later</string>
    <string name="setting">Setting</string>
    <string name="turkish">Turkish</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="german">German</string>
    <string name="russian">Russian</string>
    <string name="french">French</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="visit_web_site">Visit Web Site</string>
    <string name="search">Search</string>
    <string name="relevancy">Relevancy</string>
    <string name="popularity">Popularity</string>
    <string name="published_at">Published At</string>
    <string name="filter_image">Filter Image</string>
</resources>