<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home_screen">

    <fragment
        android:id="@+id/navigation_home_screen"
        android:name="com.umutcansahin.mynewsapp.ui.home_screen.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_screen_to_navigation_home_detail_screen"
            app:destination="@id/navigation_home_detail_screen" />
    </fragment>
    <fragment
        android:id="@+id/navigation_home_detail_screen"
        android:name="com.umutcansahin.mynewsapp.ui.home_detail_screen.HomeDetailFragment"
        android:label="@string/home_detail"
        tools:layout="@layout/fragment_home_detail" >
        <argument
            android:name="articleUiModel"
            app:argType="com.umutcansahin.mynewsapp.domain.model.ArticleUiModel" />
    </fragment>
    <fragment
        android:id="@+id/navigation_favorite_screen"
        android:name="com.umutcansahin.mynewsapp.ui.favori_screen.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/navigation_setting_screen"
        android:name="com.umutcansahin.mynewsapp.ui.setting_screen.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting" />
</navigation>